crates/plotnik-lib/tests/02-parser/recovery_unexpected/empty_alternation_after_garbage.txt
[^^^ @name]
------------------ DIAGNOSTICS -------------------
error: expected a branch, or `]` to close
 --> query.ptk:1:2
  |
1 | [^^^ @name]
  |  ^^^^^^^^^
